# openGL

./: CMakeLists.txt  gouraud.frag  gouraud.vert  gouraudpot.frag  gouraudpot.vert  simple.frag  simple.vert
gllab1/: Board.cpp  Board.h  ColorCube.cpp  ColorCube.h  Loader.h  MyGlWindow.cpp  MyGlWindow.h  Sphere.cpp  Sphere.h  main.cpp  vboteapot.cpp  vboteapot.h
